# GoogleMCPUI

./: .gitignore  GOOGLE_SETUP.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/google_mcp_server/: __init__.py  __main__.py  core.py  server.py  services.py
tests/: __init__.py  test_core.py
tools/: __init__.py  test_integration.py
ui/: streamlit_app.py
